# emscan

./: .cruft.json  .github_changelog_generator  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
src/emscan/: __init__.py  _functions.py  functions.py  main.py
